tests/wordpress/fail/plugins/wordpress-popular-posts/wordpress-popular-posts.php
<?php
/*
Plugin Name: Wordpress Popular Posts
Plugin URI: http://wordpress.org/extend/plugins/wordpress-popular-posts
Description: Showcases your most popular posts to your visitors on your blog's sidebar. Use Wordpress Popular Posts as a widget or place it anywhere on your theme using  <strong>&lt;?php wpp_get_mostpopular(); ?&gt;</strong>
Version: 2.1.4
Author: H&eacute;ctor Cabrera
Author URI: http://wordpress.org/extend/plugins/wordpress-popular-posts
License: GPL2
*/
